[tool.poetry]
name = "cutup"
version = "0.3.0"
description = "分词能力"
authors = ["yezi <yehaowei20060411@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^23.3.0"
sspeedup = {extras = ["api-response-sanic", "word-split-jieba"], version = "^0.6.0"}
pyyaml = "^6.0"
pymongo = "^4.3.3"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
pyright = "^1.1.302"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

select = ["A", "ANN", "B", "C", "E", "F", "I", "N", "RET", "S", "SIM", "UP", "W"]

ignore = ["ANN101", "ANN102", "ANN401", "C901", "E501", "S101", "S104"]

target-version = "py38"